--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
@@ -18,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-rating": "^2.0.5",
